# RT-object_detection

./: CMakeLists.txt  README.md  inference.cpp  inference.hpp  main.cpp  model_exporter.py
.cache/clangd/index/: crow_all.h.4B466476269D898E.idx  inference.cpp.80B2804209DE6769.idx  inference.hpp.E5B47744E0D66955.idx  main.cpp.BAEBD8D86D93F07E.idx  onnxruntime_c_api.h.8B163661A5BF98FC.idx  onnxruntime_cxx_api.h.76F8D0CF18C41BA3.idx  onnxruntime_cxx_inline.h.93EC8A7A98B53878.idx  onnxruntime_ep_c_api.h.03D612A1A3E3A433.idx  onnxruntime_float16.h.D1BD04AE6A7E9147.idx
onnxruntime-osx-universal2-1.23.2/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
onnxruntime-osx-universal2-1.23.2/lib/pkgconfig/: libonnxruntime.pc
